sumo/tests/sumo/output/e1/errors/pos_false/errors.sumo
Error: Attribute 'pos' in definition of e1Detector '4/1to3/1' is not a real number.
Quitting (on error).
